--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/emarket
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+
+
+
+
+#spring.datasource.initialization-mode=always
+#spring.datasource.continue-on-error=true
