--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,25 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/emarket
-spring.datasource.username=root
-spring.datasource.password=12345
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/emarket
+#spring.datasource.username=root
+#spring.datasource.password=12345
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.database=H2
+spring.database.driverClassName=org.h2.Driver
+flyway.enabled=true
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/test;MODE=MYSQL
 
 
 
-#spring.datasource.initialization-mode=always
-#spring.datasource.continue-on-error=true
+
+
+
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
